--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,4 +18,12 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  padding: 0px;
+  margin: 0px;
+  outline: none;
+}
+
+.monaco-editor .margin {
+  background-color: #1e1e1e !important;
+  border-right: none !important;
 }
