--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,12 +15,7 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 0px;
-  margin: 0px;
-  outline: none;
+  @apply m-0 p-0 !important;
 }
 
 .monaco-editor .margin {
